# ds-assistant

./: .gitignore  README.md  main.py  pyproject.toml
app/: datamodels.py  main.py  requirements.txt  run_llm_code.py  tools.py  utils.py
app/.streamlit/: config.toml
docs/: GeneralizedTuner_README.md
examples/: generalized_tuner_example.py
notebooks/: auto_tune.ipynb  features.md  features.py  features_day1.md  features_day1.py
src/: run_llm_code.py  utils.py
src/modules/: fe.py  fs.py  pipeline_template.py  tune.py  tune_optuna.py  xgb_tune.py
